adding google analytics integration scripts

--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
+    <meta name="description"
+        content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
     <meta name="author" content="Mostafa Saleh">
 
     <!--Open Graph Meta Tags-->
     <meta property="og:url" content="eng-mostafasaleh.blogspot.com">
     <meta property="og:title" content="Mostafa Saleh">
-    <meta property="og:description" content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
+    <meta property="og:description"
+        content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
     <meta property="og:image" content="">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="eng-mostafasaleh.blogspot.com">
     <meta property="twitter:url" content="eng-mostafasaleh.blogspot.com">
     <meta name="twitter:title" content="Mostafa Saleh">
-    <meta name="twitter:description" content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
+    <meta name="twitter:description"
+        content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
     <meta name="twitter:image" content="">
     <!--END Open Graph Meta Tags-->
 
@@ -33,7 +37,9 @@
     <!--Linking Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <!--Linking Fonts-->
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -71,6 +77,7 @@
         }
         </script> -->
 </head>
+
 <body>
     <header class="header">
         <i class='bx bx-menu' id="menu-icon"></i>
@@ -88,16 +95,24 @@
             <h3>Hello, It's me</h3>
             <h1><strong>Mostafa Saleh</strong></h1>
             <h3>And I'm a <span class="typed"></span></h3>
-            <p>I'm a software developer who is passionate about creating technology to elevate people and help new developers to find the right path. Some technologies I enjoy working with include Javascript, ReactJS.</p>
+            <p>I'm a software developer who is passionate about creating technology to elevate people and help new
+                developers to find the right path. Some technologies I enjoy working with include Javascript, ReactJS.
+            </p>
             <div class="social-media">
-                <a href="https://www.facebook.com/Saleh2011/"style="--i:1" title="Facebook" target="_blank"><i class='bx bxl-facebook'></i></a>
-                <a href="https://www.instagram.com/mostafamsaleh/"style="--i:2" title="Instagram" target="_blank"><i class='bx bxl-instagram'></i></a>
-                <a href="https://www.linkedin.com/in/mostafasaleh5/"style="--i:3" title="Linkedin" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://wa.me/+201140855227"style="--i:4" title="Whatsapp" target="_blank"><i class='bx bxl-whatsapp'></i></a>
-                <a href="https://github.com/mostafasaleh1"style="--i:5" title="Github" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="mailto:most.saleh@hotmail.com"style="--i:6" title="Email"><i class='bx bx-envelope'></i></a>
-                <a href="https://telegram.me/+201140855227?start=chat"style="--i:7" title="Telegram" target="_blank"><i class='bx bxl-telegram'></i></a>
-                <a href="tel:+201140855227"style="--i:8" title="Phone"><i class='bx bxs-phone'></i></a>
+                <a href="https://www.facebook.com/Saleh2011/" style="--i:1" title="Facebook" target="_blank"><i
+                        class='bx bxl-facebook'></i></a>
+                <a href="https://www.instagram.com/mostafamsaleh/" style="--i:2" title="Instagram" target="_blank"><i
+                        class='bx bxl-instagram'></i></a>
+                <a href="https://www.linkedin.com/in/mostafasaleh5/" style="--i:3" title="Linkedin" target="_blank"><i
+                        class='bx bxl-linkedin'></i></a>
+                <a href="https://wa.me/+201140855227" style="--i:4" title="Whatsapp" target="_blank"><i
+                        class='bx bxl-whatsapp'></i></a>
+                <a href="https://github.com/mostafasaleh1" style="--i:5" title="Github" target="_blank"><i
+                        class='bx bxl-github'></i></a>
+                <a href="mailto:most.saleh@hotmail.com" style="--i:6" title="Email"><i class='bx bx-envelope'></i></a>
+                <a href="https://telegram.me/+201140855227?start=chat" style="--i:7" title="Telegram" target="_blank"><i
+                        class='bx bxl-telegram'></i></a>
+                <a href="tel:+201140855227" style="--i:8" title="Phone"><i class='bx bxs-phone'></i></a>
             </div>
             <a href="https://github.com/mostafasaleh1/CV/raw/main/CV.pdf" class="btn">Download CV</a>
         </main>
@@ -114,7 +129,10 @@
         <main class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Frontend Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eveniet explicabo similique soluta illo numquam suscipit veritatis, quas laudantium totam dolorum necessitatibus in quo exercitationem ullam. Voluptatem consequuntur dicta sed eaque, sapiente maiores non facilis vero error, temporibus quaerat, accusamus animi quidem? Cupiditate corporis ex vero.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eveniet explicabo similique soluta illo
+                numquam suscipit veritatis, quas laudantium totam dolorum necessitatibus in quo exercitationem ullam.
+                Voluptatem consequuntur dicta sed eaque, sapiente maiores non facilis vero error, temporibus quaerat,
+                accusamus animi quidem? Cupiditate corporis ex vero.</p>
             <a href="#" class="btn">Read More</a>
         </main>
     </section>
@@ -126,21 +144,24 @@
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi veritatis dignissimos fugit laudantium? Porro nemo eaque ad accusantium voluptatum quos velit, quia odio sed necessitatibus!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi veritatis dignissimos fugit
+                    laudantium? Porro nemo eaque ad accusantium voluptatum quos velit, quia odio sed necessitatibus!</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bx-paint'></i>
                 <h3>Graphic Design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi veritatis dignissimos fugit laudantium? Porro nemo eaque ad accusantium voluptatum quos velit, quia odio sed necessitatibus!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi veritatis dignissimos fugit
+                    laudantium? Porro nemo eaque ad accusantium voluptatum quos velit, quia odio sed necessitatibus!</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
-                <i class='bx bx-line-chart' ></i>
+                <i class='bx bx-line-chart'></i>
                 <h3>Digital Marketing</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi veritatis dignissimos fugit laudantium? Porro nemo eaque ad accusantium voluptatum quos velit, quia odio sed necessitatibus!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi veritatis dignissimos fugit
+                    laudantium? Porro nemo eaque ad accusantium voluptatum quos velit, quia odio sed necessitatibus!</p>
                 <a href="#" class="btn">Read More</a>
             </div>
         </div>
@@ -167,7 +188,7 @@
                     <a href="#"><i class='bx bx-link-external' title="#"></i></a>
                 </div>
             </div>
-            
+
             <div class="portfolio-box">
                 <img src="images/portfolio/portfolio3.jpg" alt="portfolio1">
                 <div class="portfolio-layer">
@@ -218,7 +239,8 @@
                 <input type="number" placeholder="Mobile Number">
                 <input type="text" placeholder="Email Subject">
             </div>
-            <textarea name="textarea" id="text-area" cols="30" rows="10" placeholder="Your Message" style="resize: none;"></textarea>
+            <textarea name="textarea" id="text-area" cols="30" rows="10" placeholder="Your Message"
+                style="resize: none;"></textarea>
             <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
@@ -226,15 +248,27 @@
     <!--FOOTER-->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by <a href="https://www.linkedin.com/in/mostafasaleh5" title="Mostafa Saleh Linkedin" target="_blank"><span>Mostafa Saleh</span></a></p>
+            <p>Copyright &copy; 2023 by <a href="https://www.linkedin.com/in/mostafasaleh5"
+                    title="Mostafa Saleh Linkedin" target="_blank"><span>Mostafa Saleh</span></a></p>
         </div>
         <div class="footer-iconTop">
             <a href="#home"><i class='bx bx-up-arrow-alt' title="#"></i></a>
         </div>
     </footer>
     <!--END FOOTER-->
+    <!-- GOOGLE ANALYTICS -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-659H1NNMVX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-659H1NNMVX');
+    </script>
+    <!-- END GOOGLE ANALYTICS -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
     <script src="js/js.js"></script>
 </body>
+
 </html>
