making the closing animation of navbar smooth on mobile view

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
     <header class="header">
         <i class='bx bx-menu' id="menu-icon"></i>
-        <nav class="navbar">
+        <nav class="navbar off first-off">
             <a href="#home" class="navbar-links active" title="home">Home</a>
             <a href="#about" class="navbar-links" title="about">About</a>
             <a href="#services" class="navbar-links" title="services">Services</a>
