distributing animations onto files and also fixing the favicon and webmanifest errors

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
   <!--END Open Graph Meta Tags-->
 
   <!--Favicon-->
-  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-  <link rel="manifest" href="images/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./public\publisAssets\favicon\apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./publicAssets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./publicAssets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="./publicAssets/favicon/site.webmanifest">
   <!--END Favicon-->
 
   <!--Linking Fonts-->
@@ -58,38 +58,6 @@
     gtag('config', 'G-659H1NNMVX');
   </script>
   <!-- END GOOGLE ANALYTICS -->
-
-  <!-- JSON-LD code, it's added for each page separately to structure the code for search engines -->
-  <!-- link for different type of structured content https://developers.google.com/search/docs/appearance/structured-data/search-gallery -->
-  <!-- <script type="application/ld+json">
-        {
-            "@context": "https://schema.org/",
-            "@type": "Recipe",
-            "name": "Apple Pie by Grandma",
-            "author": "Elaine Smith",
-            "image": "https://images.edge-generalmills.com/56459281-6fe6-4d9d-984f-385c9488d824.jpg",
-            "description": "A classic apple pie.",
-            "aggregateRating": {
-            "@type": "AggregateRating",
-            "ratingValue": "4.8",
-            "reviewCount": "7462",
-            "bestRating": "5",
-            "worstRating": "1"
-            },
-            "prepTime": "PT30M",
-            "totalTime": "PT1H30M",
-            "recipeYield": "8",
-            "nutrition": {
-            "@type": "NutritionInformation",
-            "calories": "512 calories"
-            },
-            "recipeIngredient": [
-            "1 box refrigerated pie crusts, softened as directed on box",
-            "6 cups thinly sliced, peeled apples (6 medium)"
-            ]
-        }
-        </script> -->
-
   <title>Mostafa Saleh portfolio website. Here I post my project, services, contacts and much more.</title>
 </head>
 
