fixing manifest files and removing unnecessary files

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
   <meta name="author" content="Mostafa Saleh">
-  <!-- <meta name="theme-color" content="#000000" /> -->
+  <meta name="theme-color" content="#0ef" />
 
   <!--Open Graph Meta Tags-->
   <meta property="og:url" content="https://mostafasaleh1.github.io/myprofile">
@@ -32,7 +32,7 @@
   <link rel="manifest" href="./publicAssets/favicon/site.webmanifest">
   <!--END Favicon-->
 
-  <script type="text/javascript">
+  <script type="text/javascript" defer>
     (function (c, l, a, r, i, t, y) {
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
       t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
@@ -41,8 +41,8 @@
   </script>
 
   <!-- GOOGLE ANALYTICS -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-659H1NNMVX"></script>
-  <script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-659H1NNMVX" defer></script>
+  <script defer>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
