imporving website performance on mobile phones by removing some animations and preloading the main page image and removing google analytics scripts

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
   <link rel="manifest" href="./publicAssets/favicon/site.webmanifest">
   <!--END Favicon-->
 
+  <link rel="preload" as="image" href="../src/assets/1.webp">
+  
+  <!-- Microsoft Clarity -->
   <script type="text/javascript" defer>
     (function (c, l, a, r, i, t, y) {
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
@@ -39,17 +42,8 @@
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "gvzduvj4lm");
   </script>
+  <!-- Microsoft Clarity -->
 
-  <!-- GOOGLE ANALYTICS -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-659H1NNMVX" defer></script>
-  <script defer>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-659H1NNMVX');
-  </script>
-  <!-- END GOOGLE ANALYTICS -->
   <title>Mostafa Saleh portfolio website. Here I post my project, services, contacts and much more.</title>
 </head>
 
