adding translation functionality to the app.

--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,13 @@
   <!--END Favicon-->
 
   <!-- Microsoft Clarity -->
-  <!-- <script type="text/javascript" defer>
+  <script type="text/javascript" defer>
     (function (c, l, a, r, i, t, y) {
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
       t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "gvzduvj4lm");
-  </script> -->
+  </script>
   <!-- Microsoft Clarity -->
 
   <title>Mostafa Saleh portfolio website. Here I post my project, services, contacts and much more.</title>
