--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <!--END Open Graph Meta Tags-->
 
   <!--Favicon-->
-  <link rel="apple-touch-icon" sizes="180x180" href="./public\publisAssets\favicon\apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./publicAssets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./publicAssets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./publicAssets/favicon/favicon-16x16.png">
   <link rel="manifest" href="./publicAssets/favicon/site.webmanifest">
