--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,21 @@
   </script>
   <!-- Microsoft Clarity -->
 
+  <!-- Start Single Page Apps for GitHub Pages -->
+  <script type="text/javascript">
+    (function (l) {
+      if (l.search[1] === '/') {
+        var decoded = l.search.slice(1).split('&').map(function (s) {
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+          l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
+  </script>
+  <!-- End Single Page Apps for GitHub Pages -->
+
   <title>Mostafa Saleh portfolio website. Here I post my project, services, contacts and much more.</title>
 </head>
 
