verifying google search console and bing webmaster

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
     content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
   <meta name="author" content="Mostafa Saleh">
   <meta name="theme-color" content="#0ef" />
+  <!-- Bing Webmaster Tools Verification Tag -->
+  <meta name="msvalidate.01" content="6E740F3FD2EF159C5B3859DEB9B63B62" />
+  <!-- END Bing Webmaster Tools Verification Tag -->
+  <!-- Google Search Console Verification Tag -->
+  <meta name="google-site-verification" content="BkTyonp2dZFgWThDp9ZcfVM5x-y5TdGFd_CrP9pAs2c" />
+  <!-- END Google Search Console Verification Tag -->
 
   <!--Open Graph Meta Tags-->
   <meta property="og:url" content="https://mostafasaleh1.github.io/myprofile">
