fixed: and reloading

--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
   <!-- END Google Search Console Verification Tag -->
 
   <!--Open Graph Meta Tags-->
-  <meta property="og:url" content="https://mostafasaleh1.github.io/myprofile">
+  <meta property="og:url" content="https://mostafasaleh1.github.io/">
   <meta property="og:title" content="Mostafa Saleh">
   <meta property="og:description"
     content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
   <meta property="og:image" content="">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="https://mostafasaleh1.github.io/myprofile">
-  <meta property="twitter:url" content="https://mostafasaleh1.github.io/myprofile">
+  <meta property="twitter:domain" content="https://mostafasaleh1.github.io/">
+  <meta property="twitter:url" content="https://mostafasaleh1.github.io/">
   <meta name="twitter:title" content="Mostafa Saleh">
   <meta name="twitter:description"
     content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
