--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,18 @@
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "gvzduvj4lm");
   </script>
-  <!-- Microsoft Clarity -->
+  <!-- END Microsoft Clarity -->
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-659H1NNMVX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-659H1NNMVX');
+  </script>
+  <!-- END Google Analytics -->
 
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
