changed website description meta data, and added image link to meta data.

--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,15 @@
   <meta property="og:url" content="https://mostafasaleh1.github.io/">
   <meta property="og:title" content="Mostafa Saleh">
   <meta property="og:description"
-    content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
-  <meta property="og:image" content="">
+    content="Hello, my name is Mostafa, A Highly-motivated Computer Engineering graduate. Seeking a dynamic role in Network Engineering that provides opportunities for growth, continuous learning, and collaboration. My key interests include IT Infrastructure, Network & Cloud Architecture, System Administration, Protocols, and Network Security.">
+  <meta property="og:image" content="https://mostafasaleh1.github.io/static/media/600x600.5f0d78621825617ef38c.webp">
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="https://mostafasaleh1.github.io/">
   <meta property="twitter:url" content="https://mostafasaleh1.github.io/">
   <meta name="twitter:title" content="Mostafa Saleh">
   <meta name="twitter:description"
-    content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
-  <meta name="twitter:image" content="">
+    content="Hello, my name is Mostafa, A Highly-motivated Computer Engineering graduate. Seeking a dynamic role in Network Engineering that provides opportunities for growth, continuous learning, and collaboration. My key interests include IT Infrastructure, Network & Cloud Architecture, System Administration, Protocols, and Network Security.">
+  <meta name="twitter:image" content="https://mostafasaleh1.github.io/static/media/600x600.5f0d78621825617ef38c.webp">
   <!--END Open Graph Meta Tags-->
 
   <!--Favicon-->
