changed description of the website

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
+    content="Hello, my name is Mostafa, A Highly-motivated Computer Engineering graduate. Seeking a dynamic role in Network Engineering that provides opportunities for growth, continuous learning, and collaboration. My key interests include IT Infrastructure, Network & Cloud Architecture, System Administration, Protocols, and Network Security.">
   <meta name="author" content="Mostafa Saleh">
   <meta name="theme-color" content="#0ef" />
   <!-- Bing Webmaster Tools Verification Tag -->
